# cortex-codex-mock-preli

./: CLAUDE.md  README.md  docker-compose.yml  package-lock.json
.github/workflows/: cd.yml
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  normalizer_client.py  pipeline.py  safety.py  schemas.py
backend/cortex/: settings.py  urls.py
backend/tests/: conftest.py  test_health.py  test_safety.py  test_sort_ticket.py
backend/tickets/: choices.py  models.py  normalizer_client.py  pipeline.py  safety.py  serializers.py  urls.py  views.py
backend/tickets/migrations/: 0001_initial.py
backend/tickets/tests/: test_health.py  test_safety.py  test_sort_ticket.py
deploy/nginx/: cortex-codex.conf
docs/: BENCHMARK.md  TEST_PLAN.md
frontend/: .env.example  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/sort-ticket/: route.ts
normalizer/: .env.example  API_TESTS.md  CLAUDE.md  Dockerfile  Plan.md  README.md  __init__.py  config.py  fallback.py  main.py  normalizer.py  postprocess.py  requirements.txt  schema.py
normalizer/llm/: __init__.py  base.py  ollama.py  openrouter.py
normalizer/prompts/: __init__.py  classification_prompt.py
normalizer/tests/: test_normalizer.py
